--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="banner">
                 <div class="banner-heading half-width">
                     <h1> Conmebol <br> Copa America <br> 2021 </h1>
-                    <a href="#" class="watch-btn">Watch Live <i class="fas fa-arrow-right"></i> </a>
+                    <a href="https://copaamerica.com/en/" class="watch-btn" target="_blank">Watch Live <i class="fas fa-arrow-right"></i> </a>
                 </div>
                 <div class="banner-image half-width">
                     <img src="images/banner.png" alt="">
@@ -97,6 +97,57 @@
         </div>
     </section>
 
+    <!-- Highlights section -->
+
+    <section class="highlights-area">
+        <div class="flex-container">
+            <div class="match-highlights">
+                <h2 class="section-title">Match Highlights</h2>
+                <p class="section-subtitle">The 2021 Copa América was the 47th edition of the Copa América, the international men's football championship organised by South America's football ruling body CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021.</p>
+                <div class="highlights-grid">
+                    <div class="single-highlight">
+                        <img src="images/hightlights/highlight-1.jpg" alt="">
+                        <h2 class="highlight-title">
+                            <a href="https://copaamerica.com/en/news/team-of-the-conmebol-copa-america-2021/" target="_blank">One by one, the team of the CONMEBOL Copa America chosen by GET.</a>
+                        </h2>
+                    </div> 
+                    <div class="single-highlight">
+                        <img src="images/hightlights/highlight-2.jpg" alt="">
+                        <h2 class="highlight-title">
+                            <a href="https://copaamerica.com/en/news/all-of-the-conmebol-copa-america-champions/" target="_blank">All of the CONMEBOL Copa America champions.</a>
+                        </h2>
+                    </div>
+                    <div class="single-highlight">
+                        <img src="images/hightlights/highlight-3.jpg" alt="">
+                        <h2 class="highlight-title">
+                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/" target="_blank">Relive all of the goals from the CONMEBOL Copa America 2021!</a>
+                        </h2>
+                    </div>
+                    <div class="single-highlight">
+                        <img src="images/hightlights/highlight-4.jpg" alt="">
+                        <h2 class="highlight-title">
+                            <a href="https://copaamerica.com/en/news/messi-numbers-conmebol-copa-america-2021-argentina-champion/" target="_blank">Messi, the best player at the CONMEBOL Copa America 2021.</a>
+                        </h2>
+                    </div>
+                    <div class="single-highlight">
+                        <img src="images/hightlights/highlight-5.jpg" alt="">
+                        <h2 class="highlight-title">
+                            <a href="https://copaamerica.com/en/news/the-best-of-the-conmebol-copa-america-2021/" target="_blank">Player of the tournament, top scorer and best goalkeeper: Stars of the CONMEBOL Copa América 2021.</a>
+                        </h2>
+                    </div>
+                    <div class="single-highlight">
+                        <img src="images/hightlights/highlight-6.jpg" alt="">
+                        <h2 class="highlight-title">
+                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/" target="_blank">All of the goals scored by CONMEBOL Copa América 2021 champion Argentina.</a>
+                        </h2>
+                    </div>       
+
+                </div>
+            </div>  
+        </div>
+    </section>
+
+
     <!-- Call to action area  -->
     <section class="cta-area">
         <div class="flex-container">
@@ -114,57 +165,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Highlights section -->
-
-    <section class="highlights-area">
-        <div class="flex-container">
-            <div class="match-highlights">
-                <h2 class="section-title">Match Highlights</h2>
-                <p class="section-subtitle">The 2021 Copa América was the 47th edition of the Copa América, the international men's football championship organised by South America's football ruling body CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021.</p>
-                <div class="highlights-grid">
-                    <div class="single-highlight">
-                        <img src="images/hightlights/highlight-1.jpg" alt="">
-                        <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/team-of-the-conmebol-copa-america-2021/">One by one, the team of the CONMEBOL Copa America chosen by GET.</a>
-                        </h2>
-                    </div> 
-                    <div class="single-highlight">
-                        <img src="images/hightlights/highlight-2.jpg" alt="">
-                        <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/all-of-the-conmebol-copa-america-champions/">All of the CONMEBOL Copa America champions.</a>
-                        </h2>
-                    </div>
-                    <div class="single-highlight">
-                        <img src="images/hightlights/highlight-3.jpg" alt="">
-                        <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/">Relive all of the goals from the CONMEBOL Copa America 2021!</a>
-                        </h2>
-                    </div>
-                    <div class="single-highlight">
-                        <img src="images/hightlights/highlight-4.jpg" alt="">
-                        <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/messi-numbers-conmebol-copa-america-2021-argentina-champion/">Messi, the best player at the CONMEBOL Copa America 2021.</a>
-                        </h2>
-                    </div>
-                    <div class="single-highlight">
-                        <img src="images/hightlights/highlight-5.jpg" alt="">
-                        <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/the-best-of-the-conmebol-copa-america-2021/">Player of the tournament, top scorer and best goalkeeper: Stars of the CONMEBOL Copa América 2021.</a>
-                        </h2>
-                    </div>
-                    <div class="single-highlight">
-                        <img src="images/hightlights/highlight-6.jpg" alt="">
-                        <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/">All of the goals scored by CONMEBOL Copa América 2021 champion Argentina.</a>
-                        </h2>
-                    </div>       
-
-                </div>
-            </div>  
-        </div>
-    </section>
-
     <!-- copyright area  -->
     <section class="copyright-area">
         <div class="flex-container">
