--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <div class="banner">
                 <div class="banner-heading half-width">
                     <h1> Conmebol <br> Copa America <br> 2021 </h1>
-                    <a href="https://copaamerica.com/en/" class="watch-btn" target="_blank">Watch Live <i class="fas fa-arrow-right"></i> </a>
+                    <a href="https://copaamerica.com/en/" class="watch-btn" target="_blank">Watch Live <i
+                            class="fas fa-arrow-right"></i> </a>
                 </div>
                 <div class="banner-image half-width">
                     <img src="images/banner.png" alt="">
@@ -36,62 +37,79 @@
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-1.png" alt="Neymar Jr">
                     <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-text">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+                    <p class="player-text">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
+                        Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain
+                        and the Brazil national team.</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-2.png" alt="Lionel Messi">
                     <h3 class="player-name">Lionel Messi</h3>
-                    <p class="player-text">Lionel Andrés Messi also known as Leo Messi (born 24 June 1987) is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team. </p>
+                    <p class="player-text">Lionel Andrés Messi also known as Leo Messi (born 24 June 1987) is an
+                        Argentine professional footballer who plays as a forward or an attacking midfielder and captains
+                        the Argentina national team. </p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-3.png" alt="Cristiano Ronaldo">
                     <h3 class="player-name">Cristiano Ronaldo</h3>
-                    <p class="player-text">Cristiano Ronaldo dos Santos Aveiro GOIH ComM (born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                    <p class="player-text">Cristiano Ronaldo dos Santos Aveiro GOIH ComM (born 5 February 1985) is a
+                        Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains
+                        the Portugal national team.</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-4.png" alt="Paulo Dybala">
                     <h3 class="player-name">Paulo Dybala</h3>
-                    <p class="player-text">Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team</p>
+                    <p class="player-text">Paulo Exequiel Dybala is an Argentine professional footballer who plays as a
+                        forward for Serie A club Juventus and the Argentina national team</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-5.png" alt="Mesut Ozil">
                     <h3 class="player-name">Mesut Ozil</h3>
-                    <p class="player-text">Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity.</p>
+                    <p class="player-text">Mesut Özil is a German professional footballer who plays as an attacking
+                        midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his
+                        technical skills, creativity.</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-6.png" alt="Mauro Icardi">
                     <h3 class="player-name">Mauro Icardi</h3>
-                    <p class="player-text">Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                    <p class="player-text">Mauro Emanuel Icardi is an Argentine professional footballer who plays as a
+                        striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-7.png" alt="Di Maria">
                     <h3 class="player-name">Di Maria</h3>
-                    <p class="player-text">Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team</p>
+                    <p class="player-text">Ángel Fabián Di María is an Argentine professional footballer who plays for
+                        Ligue 1 club Paris Saint-Germain and the Argentina national team</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-8.png" alt="Kylian Mbappé">
                     <h3 class="player-name">Kylian Mbappé</h3>
-                    <p class="player-text">Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+                    <p class="player-text">Kylian Mbappé Lottin is a French professional footballer who plays as a
+                        forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-9.png" alt="Mohamed Salah">
                     <h3 class="player-name">Mohamed Salah</h3>
-                    <p class="player-text">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team</p>
+                    <p class="player-text">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who
+                        plays as a forward for Premier League club Liverpool and captains the Egypt national team</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-10.png" alt="Harry Kane">
                     <h3 class="player-name">Harry Kane</h3>
-                    <p class="player-text">Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
+                    <p class="player-text">Harry Edward Kane MBE is an English professional footballer who plays as a
+                        striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-11.png" alt="Kevin De Bruyne">
                     <h3 class="player-name">Kevin De Bruyne</h3>
-                    <p class="player-text">Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team</p>
+                    <p class="player-text">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                        midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium
+                        national team</p>
                 </div>
                 <div class="single-player">
                     <img class="player-image" src="images/players/player-12.png" alt="Philippe Coutinho">
                     <h3 class="player-name">Philippe Coutinho</h3>
-                    <p class="player-text">Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.</p>
+                    <p class="player-text">Philippe Coutinho Correia is a Brazilian professional footballer who plays as
+                        an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.</p>
                 </div>
             </div>
         </div>
@@ -103,47 +121,57 @@
         <div class="flex-container">
             <div class="match-highlights">
                 <h2 class="section-title">Match Highlights</h2>
-                <p class="section-subtitle">The 2021 Copa América was the 47th edition of the Copa América, the international men's football championship organised by South America's football ruling body CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021.</p>
+                <p class="section-subtitle">The 2021 Copa América was the 47th edition of the Copa América, the
+                    international men's football championship organised by South America's football ruling body
+                    CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021.</p>
                 <div class="highlights-grid">
                     <div class="single-highlight">
                         <img src="images/hightlights/highlight-1.jpg" alt="">
                         <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/team-of-the-conmebol-copa-america-2021/" target="_blank">One by one, the team of the CONMEBOL Copa America chosen by GET.</a>
+                            <a href="https://copaamerica.com/en/news/team-of-the-conmebol-copa-america-2021/"
+                                target="_blank">One by one, the team of the CONMEBOL Copa America chosen by GET.</a>
                         </h2>
-                    </div> 
+                    </div>
                     <div class="single-highlight">
                         <img src="images/hightlights/highlight-2.jpg" alt="">
                         <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/all-of-the-conmebol-copa-america-champions/" target="_blank">All of the CONMEBOL Copa America champions.</a>
+                            <a href="https://copaamerica.com/en/news/all-of-the-conmebol-copa-america-champions/"
+                                target="_blank">All of the CONMEBOL Copa America champions.</a>
                         </h2>
                     </div>
                     <div class="single-highlight">
                         <img src="images/hightlights/highlight-3.jpg" alt="">
                         <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/" target="_blank">Relive all of the goals from the CONMEBOL Copa America 2021!</a>
+                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/"
+                                target="_blank">Relive all of the goals from the CONMEBOL Copa America 2021!</a>
                         </h2>
                     </div>
                     <div class="single-highlight">
                         <img src="images/hightlights/highlight-4.jpg" alt="">
                         <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/messi-numbers-conmebol-copa-america-2021-argentina-champion/" target="_blank">Messi, the best player at the CONMEBOL Copa America 2021.</a>
+                            <a href="https://copaamerica.com/en/news/messi-numbers-conmebol-copa-america-2021-argentina-champion/"
+                                target="_blank">Messi, the best player at the CONMEBOL Copa America 2021.</a>
                         </h2>
                     </div>
                     <div class="single-highlight">
                         <img src="images/hightlights/highlight-5.jpg" alt="">
                         <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/the-best-of-the-conmebol-copa-america-2021/" target="_blank">Player of the tournament, top scorer and best goalkeeper: Stars of the CONMEBOL Copa América 2021.</a>
+                            <a href="https://copaamerica.com/en/news/the-best-of-the-conmebol-copa-america-2021/"
+                                target="_blank">Player of the tournament, top scorer and best goalkeeper: Stars of the
+                                CONMEBOL Copa América 2021.</a>
                         </h2>
                     </div>
                     <div class="single-highlight">
                         <img src="images/hightlights/highlight-6.jpg" alt="">
                         <h2 class="highlight-title">
-                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/" target="_blank">All of the goals scored by CONMEBOL Copa América 2021 champion Argentina.</a>
+                            <a href="https://copaamerica.com/en/news/all-of-the-goals-conmebol-copa-america-2021/"
+                                target="_blank">All of the goals scored by CONMEBOL Copa América 2021 champion
+                                Argentina.</a>
                         </h2>
-                    </div>       
+                    </div>
 
                 </div>
-            </div>  
+            </div>
         </div>
     </section>
 
@@ -155,12 +183,53 @@
                 <div class="cta-heading half-width">
                     <h1> All Highlights <br> Copa America 2021 </h1>
                     <p class="cta-text">
-                        The 2021 Copa América was the 47th edition of the Copa América, the international men's football championship organised by South America's football ruling body CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021
+                        The 2021 Copa América was the 47th edition of the Copa América, the international men's football
+                        championship organised by South America's football ruling body CONMEBOL. The tournament took
+                        place in Brazil from 13 June to 10 July 2021
                     </p>
-                    <a href="https://copaamerica.com/en/" class="watch-btn">Watch Now <i class="fas fa-arrow-right"></i> </a>
+                    <a href="https://copaamerica.com/en/" class="watch-btn" target="_blank">Watch Now <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
                 <div class="cta-image half-width">
                     <img src="images/match.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- image gallery area  -->
+    <section class="image-gallery-area">
+        <div class="flex-container">
+            <div class="image-gallery">
+                <h2 class="section-title">Image Gallery</h2>
+                <p class="section-subtitle">
+                    The 2021 Copa América was the 47th edition of the Copa América, the international men's football championship organised by South America's football ruling body CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021.
+                </p>
+                <div class="image-grid">
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-01.jpg" target="_blank"><img src="images/gallery/gallery-image-01.jpg" alt=""></a>
+                    </div>
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-02.jpg" target="_blank"><img src="images/gallery/gallery-image-02.jpg" alt=""></a>
+                    </div>
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-03.jpg" target="_blank"><img src="images/gallery/gallery-image-03.jpg" alt=""></a>
+                    </div>
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-04.jpg" target="_blank"><img src="images/gallery/gallery-image-04.jpg" alt=""></a>
+                    </div>
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-05.jpg" target="_blank"><img src="images/gallery/gallery-image-05.jpg" alt=""></a>
+                    </div>
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-06.jpg" target="_blank"><img src="images/gallery/gallery-image-06.jpg" alt=""></a>
+                    </div>
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-07.jpg" target="_blank"><img src="" alt=""></a>
+                    </div>
+                    <div class="single-image">
+                        <a href="images/gallery/gallery-image-08.jpg" target="_blank"><img src="images/gallery/gallery-image-08.jpg" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -182,7 +251,6 @@
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
