--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://kit.fontawesome.com/61d4e5367c.js" crossorigin="anonymous"></script>
     <!-- main stylesheet  -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Responsive stylesheet  -->
+    <link rel="stylesheet" href="/styles/responsive.css">
+
     <title>Responsive Football</title>
 </head>
 
